# rusty-cam

./: Cargo.toml  Dockerfile
.github/workflows/: build.yaml
src/: cam.html  camera_peer.rs  lib.rs  main.rs  signaling_server.rs  utils.rs
src/static/: cam.html
