[package]
name = "rusty-cam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
futures-util = "0.3.31"
gstreamer = "0.24.2"
gstreamer-app = "0.24.2"
hyper = "1.7.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = "1.18.1"
webrtc = "0.14.0"
